# modulo

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
src/: main.c  resource.c  resource.h
